--- a/packages/custom/tracks/public/views/details.html
+++ b/packages/custom/tracks/public/views/details.html
@@ -1,4 +1,4 @@
-<div class="center-block" ng-show="currTrack">
+<div ng-show="currTrack">
     <div class="panel panel-default pull-left" style="margin: 0 10px auto; width: 400px;" >
         <div class="panel-heading table-title">track info
             <div class="panel-body panel-text">
