almost done with front end of attendee table

--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -1,6 +1,6 @@
-<div class="container" data-ng-controller="EventDetailsController">
-   <div>
-       <div class="pull-right">
+
+   <div class="container" style="background-color: red">
+       <div class="pull-right" style="background-color: #2b542c">
            <div style="padding: 3px">
                <button type="submit" class="btn btn-default">update</button>
            </div>
@@ -35,7 +35,7 @@
            </div>
        </div>
 
-       <div style="margin-left: 80px">
+       <div style="margin-left: 60px; background-color: orange" data-ng-controller="EventDetailsController">
            <h1>{{event.trackId.trackName}}</h1>
            <h2>{{event.eventStartDate | date : "MM/dd/yyyy"}}</h2>
            <h3>{{event.trackId.trackAddress}}</h3>
@@ -43,8 +43,8 @@
        </div>
    </div>
 
-    <div style="height: 300px">
-        <div ng-controller="CarouselCtrl" style="margin-top:14px; background-color: #00d4b4; width:50%;" class="pull-left">
+    <div class="container" style="background-color: purple; min-height: 300px">
+        <div ng-controller="CarouselCtrl" style="min-width: 400px; margin-top:14px; background-color: #00d4b4; width:50%;" class="pull-left">
             <div class="slides-control">
                 <carousel interval="myInterval">
                     <slide ng-repeat="slide in slides" active="slide.active">
@@ -85,13 +85,78 @@
         </div>
     </div>
 
-
-    <div style="margin-top: 20px; text-align: center" class="col-md-4">
-        <a href="#" class="btn btn-default">track day calculator</a><br>
-        <a href="#" style="color: darkred">financial_report.csv</a><br>
-        <a href="#" style="color: darkred">event_manifest.csv</a>
+    <div class="container" style="background-color: greenyellow">
+        <div style="background-color: #ffff00; margin: 10px; text-align: center" class="col-md-4">
+            <a href="#" class="btn btn-default">track day calculator</a><br>
+            <a href="#" style="color: darkred">financial_report.csv</a><br>
+            <a href="#" style="color: darkred">event_manifest.csv</a>
+        </div>
     </div>
 
+    <div class="container" style="background-color: orchid">
+        <div class="panel panel-default">
+            <div class="panel-heading table-title-bg">
+                <div class="table-search pull-right">
+                    <div class="form-group input-group">
+                    <span class="input-group-addon">
+                        <i class="glyphicon glyphicon-search"></i>
+                    </span>
+                        <input ng-model="searchText" type="search" class="text-right form-control glowing-border no-validate" placeholder="Search attendees"/>
+                    </div>
+                </div>
+                <div class="table-title">attendees</div>
+            </div>
+
+            <div class="panel-body">
+                <div ng-controller="EventDetailsController">
+                    <accordion close-others="oneAtATime">
+                        <accordion-group is-open="group.expanded">
+                            <div class="pull-right">
+                                <a data-ng-controller="ModalEventController" data-ng-click="open(event)">
+                                    <button type="submit" class="btn btn-default">attend</button>
+                                </a>
+                            </div>
+                            <accordion-heading>
+                                <span class="pull-right">{{event.advancedCap - event.advancedRegistered}} spots left</span>
+                                <span class="glyphicon-group glyphicon clickable-row pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
+                                <span class="glyphicon-group glyphicon-asterisk glyphicon-space clickable-row pull-left"></span>
+                                <span class="table-subtitle clickable-row">advanced</span>
+                            </accordion-heading>
+                            <!--<div ng-repeat="contents in group.content" data-ng-include src="contents['page']" style="padding-left:0"></div>-->
+                        </accordion-group>
+                        <accordion-group is-open="group.expanded">
+                            <div class="pull-right">
+                                <a data-ng-controller="ModalEventController" data-ng-click="open(event)">
+                                    <button type="submit" class="btn btn-default">attend</button>
+                                </a>
+                            </div>
+                            <accordion-heading>
+                                <span class="pull-right">{{event.intermediateCap - event.intermediateRegistered}} spots left</span>
+                                <span class="glyphicon-group glyphicon clickable-row pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
+                                <span class="glyphicon-group glyphicon-asterisk glyphicon-space clickable-row pull-left"></span>
+                                <span class="table-subtitle clickable-row">intermediate</span>
+                            </accordion-heading>
+                            <!--<div ng-repeat="contents in group.content" data-ng-include src="contents['page']" style="padding-left:0"></div>-->
+                        </accordion-group>
+                        <accordion-group is-open="group.expanded">
+                            <div class="pull-right">
+                                <a data-ng-controller="ModalEventController" data-ng-click="open(event)">
+                                    <button type="submit" class="btn btn-default">attend</button>
+                                </a>
+                            </div>
+                            <accordion-heading>
+                                <span class="pull-right">{{event.noviceCap - event.noviceRegistered}} spots left</span>
+                                <span class="glyphicon-group glyphicon clickable-row pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
+                                <span class="glyphicon-group glyphicon-asterisk glyphicon-space clickable-row pull-left"></span>
+                                <span class="table-subtitle clickable-row">novice</span>
+                            </accordion-heading>
+                            <!--<div ng-repeat="contents in group.content" data-ng-include src="contents['page']" style="padding-left:0"></div>-->
+                        </accordion-group>
+                    </accordion>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 <!--<div style="background-color: green" data-ng-controller="ModalRegisteredController" data-ng-init="open()">
@@ -195,4 +260,4 @@
                     </tr>
                 </table>
             </div>-->
-</div>
+
