--- a/packages/system/public/assets/css/default.css
+++ b/packages/system/public/assets/css/default.css
@@ -75,6 +75,11 @@ h3 {
     font-size: 26px;
     font-family: Impact, Charcoal, sans-serif;
 }
+.table-subtitle {
+    color: #080808;
+    font-size: 18px;
+    font-family: Impact, Charcoal, sans-serif;
+}
 .table-search {
     width: 30%;
     min-width: 250px;
