--- a/packages/custom/vehicles/public/views/create.html
+++ b/packages/custom/vehicles/public/views/create.html
@@ -45,6 +45,6 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-primary" data-ng-click="add">Add</button>
-    <button class="btn btn-warning" data-ng-click="cancel()">Cancel</button>
+    <button class="btn btn-primary btn-default" data-ng-click="add">Add</button>
+    <button class="btn btn-warning btn-default" data-ng-click="cancel()">Cancel</button>
 </div>
