--- a/packages/custom/events/public/views/details.html
+++ b/packages/custom/events/public/views/details.html
@@ -1,50 +1,50 @@
+<section data-ng-controller="EventDetailsController">
+    <div class="container" style="background-color: red">
+        <div class="pull-right" style="background-color: #2b542c">
+            <div style="padding: 3px">
+                <button type="submit" class="btn btn-default">update</button>
+            </div>
+            <div style="padding: 3px">
+                <button type="submit" class="btn btn-default">cancel</button>
+            </div>
 
-   <div class="container" style="background-color: red">
-       <div class="pull-right" style="background-color: #2b542c">
-           <div style="padding: 3px">
-               <button type="submit" class="btn btn-default">update</button>
-           </div>
-           <div style="padding: 3px">
-               <button type="submit" class="btn btn-default">cancel</button>
-           </div>
+            <div style="padding: 3px" class="btn-group share-group">
+                <a data-toggle="dropdown" class="btn btn-info">
+                    <i class="fa fa-share-alt fa-inverse"></i>
+                </a>
+                <button href="#" data-toggle="dropdown" class="btn btn-info dropdown-toggle share">
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a data-original-title="Twitter" rel="tooltip"  href="#" class="btn btn-twitter" data-placement="left">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a data-original-title="Facebook" rel="tooltip"  href="#" class="btn btn-facebook" data-placement="left">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a data-original-title="Google+" rel="tooltip"  href="#" class="btn btn-google" data-placement="left">
+                            <i class="fa fa-google-plus"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
-           <div style="padding: 3px" class="btn-group share-group">
-               <a data-toggle="dropdown" class="btn btn-info">
-                   <i class="fa fa-share-alt fa-inverse"></i>
-               </a>
-               <button href="#" data-toggle="dropdown" class="btn btn-info dropdown-toggle share">
-                   <span class="caret"></span>
-               </button>
-               <ul class="dropdown-menu">
-                   <li>
-                       <a data-original-title="Twitter" rel="tooltip"  href="#" class="btn btn-twitter" data-placement="left">
-                           <i class="fa fa-twitter"></i>
-                       </a>
-                   </li>
-                   <li>
-                       <a data-original-title="Facebook" rel="tooltip"  href="#" class="btn btn-facebook" data-placement="left">
-                           <i class="fa fa-facebook"></i>
-                       </a>
-                   </li>
-                   <li>
-                       <a data-original-title="Google+" rel="tooltip"  href="#" class="btn btn-google" data-placement="left">
-                           <i class="fa fa-google-plus"></i>
-                       </a>
-                   </li>
-               </ul>
-           </div>
-       </div>
-
-       <div style="margin-left: 60px; background-color: orange" data-ng-controller="EventDetailsController">
-           <h1>{{event.trackId.trackName}}</h1>
-           <h2>{{event.eventStartDate | date : "MM/dd/yyyy"}}</h2>
-           <h3>{{event.trackId.trackAddress}}</h3>
-           <h3>{{event.trackId.trackCity}}, {{event.trackId.trackState}} {{event.trackId.trackZip}}</h3>
-       </div>
-   </div>
+        <div style="margin-left: 60px; background-color: orange">
+            <h1>{{event.trackId.trackName}}</h1>
+            <h2>{{event.eventStartDate | date : "MM/dd/yyyy"}}</h2>
+            <h3>{{event.trackId.trackAddress}}</h3>
+            <h3>{{event.trackId.trackCity}}, {{event.trackId.trackState}} {{event.trackId.trackZip}}</h3>
+        </div>
+    </div>
 
     <div class="container" style="background-color: purple; min-height: 300px">
-        <div ng-controller="CarouselCtrl" style="min-width: 400px; margin-top:14px; background-color: #00d4b4; width:50%;" class="pull-left">
+        <div ng-controller="CarouselCtrl" style="min-width: 400px; margin-top:10px; background-color: #00d4b4; width:50%;" class="pull-left">
             <div class="slides-control">
                 <carousel interval="myInterval">
                     <slide ng-repeat="slide in slides" active="slide.active">
@@ -108,47 +108,18 @@
             </div>
 
             <div class="panel-body">
+                <label>
+                    <input type="checkbox" ng-model="oneAtATime">
+                    Open only one at a time
+                </label>
                 <div ng-controller="EventDetailsController">
                     <accordion close-others="oneAtATime">
-                        <accordion-group is-open="group.expanded">
-                            <div class="pull-right">
-                                <a data-ng-controller="ModalEventController" data-ng-click="open(event)">
-                                    <button type="submit" class="btn btn-default">attend</button>
-                                </a>
-                            </div>
+                        <accordion-group ng-repeat="group in groups" is-open="group.expanded">
                             <accordion-heading>
-                                <span class="pull-right">{{event.advancedCap - event.advancedRegistered}} spots left</span>
+                                <span class="pull-right">{{group.spots}} spots left</span>
                                 <span class="glyphicon-group glyphicon clickable-row pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
                                 <span class="glyphicon-group glyphicon-asterisk glyphicon-space clickable-row pull-left"></span>
-                                <span class="table-subtitle clickable-row">advanced</span>
-                            </accordion-heading>
-                            <!--<div ng-repeat="contents in group.content" data-ng-include src="contents['page']" style="padding-left:0"></div>-->
-                        </accordion-group>
-                        <accordion-group is-open="group.expanded">
-                            <div class="pull-right">
-                                <a data-ng-controller="ModalEventController" data-ng-click="open(event)">
-                                    <button type="submit" class="btn btn-default">attend</button>
-                                </a>
-                            </div>
-                            <accordion-heading>
-                                <span class="pull-right">{{event.intermediateCap - event.intermediateRegistered}} spots left</span>
-                                <span class="glyphicon-group glyphicon clickable-row pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
-                                <span class="glyphicon-group glyphicon-asterisk glyphicon-space clickable-row pull-left"></span>
-                                <span class="table-subtitle clickable-row">intermediate</span>
-                            </accordion-heading>
-                            <!--<div ng-repeat="contents in group.content" data-ng-include src="contents['page']" style="padding-left:0"></div>-->
-                        </accordion-group>
-                        <accordion-group is-open="group.expanded">
-                            <div class="pull-right">
-                                <a data-ng-controller="ModalEventController" data-ng-click="open(event)">
-                                    <button type="submit" class="btn btn-default">attend</button>
-                                </a>
-                            </div>
-                            <accordion-heading>
-                                <span class="pull-right">{{event.noviceCap - event.noviceRegistered}} spots left</span>
-                                <span class="glyphicon-group glyphicon clickable-row pull-left" ng-class="{'glyphicon-minus': groups[$index].expanded, 'glyphicon-plus': !group[$index].expanded}"></span>
-                                <span class="glyphicon-group glyphicon-asterisk glyphicon-space clickable-row pull-left"></span>
-                                <span class="table-subtitle clickable-row">novice</span>
+                                <span class="table-subtitle clickable-row">{{group.title}}</span>
                             </accordion-heading>
                             <!--<div ng-repeat="contents in group.content" data-ng-include src="contents['page']" style="padding-left:0"></div>-->
                         </accordion-group>
@@ -157,6 +128,8 @@
             </div>
         </div>
     </div>
+</section>
+
 
 
 <!--<div style="background-color: green" data-ng-controller="ModalRegisteredController" data-ng-init="open()">
