--- a/packages/custom/events/public/views/parts/advanced.html
+++ b/packages/custom/events/public/views/parts/advanced.html
@@ -20,9 +20,7 @@
                 <td>{{attendee.vehicleId.vehicleYear}} {{attendee.vehicleId.vehicleColor}} {{attendee.vehicleId.vehicleMake}}</td>
                 <td><input type="checkbox" ng-model="attendee.riderWanted" disabled="true"></td>
                 <td><input type="checkbox" ng-model="advanced.rideAlong" disabled="true"></td>
-                <td><div class="row"><div class="col-sm-1"><input type="checkbox" ng-model="attendee.checkedin"
-                                                                  disabled="true"></div>
-                </div></td>
+                <td><input type="checkbox" ng-model="attendee.checkedin" disabled="true"></td>
             </tr>
             </tbody>
         </table>
