--- a/packages/custom/events/public/views/upcoming.html
+++ b/packages/custom/events/public/views/upcoming.html
@@ -29,7 +29,7 @@
             <td style="vertical-align:middle">{{event.trackId.trackCity}}, {{event.trackId.trackState}}</td>
             <td style="vertical-align:middle">{{event.noviceCap - event.noviceRegistered}} - {{event.intermediateCap - event.intermediateRegistered}} - {{event.advancedCap - event.advancedRegistered}}</td>
             <td style="vertical-align:middle">{{event.basePrice | currency}}</td>
-            <td style="text-align: right"><button class="btn btn-default" data-ng-controller="ModalEventController" data-ng-click="open()">attend</button></td></a>
+            <td style="text-align: right"><button class="btn btn-default" data-ng-controller="ModalEventController" data-ng-click="open()">attend</button></td>
         </tr>
         </tbody>
     </table>
