gave scrollable tables a max length, so they don't look like a huge empty table before reaching scrolling height.

--- a/packages/custom/events/public/views/past.html
+++ b/packages/custom/events/public/views/past.html
@@ -10,7 +10,7 @@
         <div class="table-title">past events</div>
     </div>
 
-    <table style="height: 250px" class="table table-hover" fixed-header>
+    <table style="max-height: 250px" class="table table-hover" fixed-header>
         <thead>
         <tr>
             <th>Date</th>
