--- a/packages/custom/events/public/views/upcoming.html
+++ b/packages/custom/events/public/views/upcoming.html
@@ -11,7 +11,7 @@
         <div class="table-title">upcoming events <a ui-sref='create event'><span class="glyphicon glyphicon-plus glyphlink-red"></span></a></div>
     </div>
 
-    <table style="height: 400px;" class="table table-hover" fixed-header>
+    <table style="max-height: 400px;" class="table table-hover" fixed-header>
         <thead>
         <tr>
             <th>Date</th>
